fix(ui): adjusts margin spacing on upload actions (#12692)

--- a/packages/ui/src/elements/Upload/index.scss
+++ b/packages/ui/src/elements/Upload/index.scss
@@ -60,9 +60,8 @@
       flex-wrap: wrap;
     }
 
-    &__previewSizes,
-    &__edit {
-      margin-top: calc(var(--base) * 1.2);
+    &__upload-actions {
+      margin-top: calc(var(--base) * 0.5);
     }
 
     &__previewDrawer {
